# Auth_sprint_2

./: .env.template  .gitignore  Makefile  README.md  docker-compose.yml
auth/: .dockerignore  .env.template  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
auth/alembic/: env.py  partition_utils.py
auth/alembic/versions/: 2024_02_29_1523-01_user_role_and_history_models.py  2024_03_01_1739-0611358e1d60_insert_roles_data.py  2024_03_16_1815-1_user_role_and_history_models.py  2024_03_16_1815-2_insert_roles_data.py  2024_03_16_1817-3_history_partition.py  2024_03_17_1553-4_create_superuser.py  2024_03_17_1553-5_create_superuser.py  2024_03_17_1849-4_social_account.py
auth/configs/: nginx.conf
auth/configs/confd/: site.conf
auth/src/: main.py
auth/src/api/: errors.py  middlewares.py  permission.py  routers.py  tracers.py
auth/src/api/v1/: __init__.py  auth.py  (+4 more)
auth/src/core/: __init__.py  base.py  config.py  constants.py  db.py  logger.py
auth/src/db/: redis.py
auth/src/models/: __init__.py  history.py  roles.py  social.py  user.py
auth/src/schemas/: __init__.py  history.py  requests.py  responses.py  roles.py  user.py
auth/src/services/: account.py  authentication.py  history.py  providers.py  roles.py  users.py  yandex.py
auth/src/utils/: paginate.py  rate_limit.py
auth/tests/: conftest.py
auth/tests/functional/: settings.py
movies_admin/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
movies_admin/config/: .env.example  settings.py  urls.py
movies_admin/config/components/: database.py
movies_admin/movies/: admin.py  authentication.py  authorization.py  constants.py  models.py
movies_admin/uwsgi/: uwsgi.ini
(+50 files in other folders)
