[tool.poetry]
name = "movies-admin"
version = "0.1.0"
description = ""
authors = ["Maxim Isaev <isaev_0602@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.5"
flake8 = "6.1.0"
python-dotenv = "1.0.0"
django-split-settings = "1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
